Center contact form
Signed-off-by: Saurav Shrivastav <sauravsrivastav103@gmail.com>

--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
     <a class="tweet" href="https://twitter.com/Vaibhav14237506" target="_blank">TWITTER</a>
     <br>
     <br>
-    <div class="contact">
-        <h2 class="heading_form">Contact Form</h2>
-        <form action="">
-            NAME: <input type="text" placeholder=""> <br> <br>
-            EMAIL: <input type="email" name="" id="" placeholder=""> <br> <br>
-            PHONE: <input type="number" placeholder=""> <br> <br>
-            MESSAGE: <textarea name="message" id="" cols="30" rows="5"></textarea> <br> <br>
-            <input class="submit" type="submit"> <br> <br>
-
-        </form>
+    <div class="contact-container">
+        <div class="contact">
+            <h2 class="heading_form">Contact Form</h2>
+            <form action="">
+                NAME: <input type="text" placeholder=""> <br> <br>
+                EMAIL: <input type="email" name="" id="" placeholder=""> <br> <br>
+                PHONE: <input type="number" placeholder=""> <br> <br>
+                MESSAGE: <textarea name="message" id="" cols="30" rows="5"></textarea> <br> <br>
+                <input class="submit" type="submit"> <br> <br>
+    
+            </form>
+        </div>
     </div>
+    
     <hr>
     <p class="credit">Designed with❤️ by Vaibhav Shrivastav</p>
 </body>
